[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "volume-cartographer"
version = "3.0.2"
description = "Python bindings for Volume Cartographer volume access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]
license = { file = "LICENSE" }

[tool.scikit-build]
cmake.version = ">=3.22"
wheel.packages = []

[tool.scikit-build.cmake.define]
VC_BUILD_PYTHON = "ON"
